--- a/functions/worker/wrangler.toml
+++ b/functions/worker/wrangler.toml
@@ -1,7 +1,11 @@
-name = "b3f-proxy-worker"
-type = "javascript"
+name = "b3f-prints-worker"
 account_id = "bd109aa80b56f640123f31a78d6d105c"
 compatibility_date = "2025-06-01"
+main = "index.js"
 workers_dev = true
-route = ""
-zone_id = ""
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = true
+
+
+
