--- a/functions/worker/wrangler.toml
+++ b/functions/worker/wrangler.toml
@@ -1,4 +1,4 @@
-name = "b3f-prints-proxy"
+name = "b3f-prints"
 account_id = "bd109aa80b56f640123f31a78d6d105c"
 compatibility_date = "2025-06-01"
 main = "index.js"
