--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,7 +1,3 @@
-
-# This file is managed by Lovable
-# Do not edit it directly unless you know what you're doing
-
 project_id = "cmpggiyuiattqjmddcac"
 
 [api]
@@ -47,50 +43,11 @@ enable_signup = true
 double_confirm_changes = true
 enable_confirmations = false
 
-[auth.external.apple]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
-[auth.external.github]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
-[auth.external.gitlab]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
-[auth.external.google]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
-[auth.external.facebook]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
-[auth.external.figma]
-enabled = false
-client_id = ""
-secret = ""
-redirect_uri = ""
-
 [analytics]
 enabled = false
 port = 54327
 vector_port = 54328
 backend = "postgres"
-
-[experimental.functions.postgres]
-default_max_runtime = 3
 
 [storage]
 enabled = true
@@ -106,5 +63,9 @@ public = true
 file_size_limit = "10MB"
 
 [functions]
-port = 54321
-serve_port = 54325
+environment = { 
+  RAZORPAY_KEY_ID = "rzp_live_FQUylFpHDtgrDj",
+  RAZORPAY_KEY_SECRET = "hICwlPjUOy0YGydGJDEsW00m",
+  SUPABASE_URL = "https://cmpggiyuiattqjmddcac.supabase.co",
+  SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+}
