--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -77,6 +78,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
