--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.0.0",
     "countries-list": "^3.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "fabric": "^5.3.0",
     "firebase": "^11.5.0",
@@ -57,6 +58,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
